src/objects/Content_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Content_Pack__r.Opportunity__r.AccountId , Content_Pack__r.Opportunity__r.Account.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Review_Due_Date__c</fullName>
        <label>Client Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Items_Designer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Item_Number__c</fullName>
        <displayFormat>NS-{00000}</displayFormat>
        <label>Content Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Content_Pack__c</fullName>
        <label>Content Pack</label>
        <referenceTo>Content_Pack__c</referenceTo>
        <relationshipLabel>Content Items</relationshipLabel>
        <relationshipName>Content_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Content_Team_Due_Date__c</fullName>
        <label>Content Team Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_FG__c</fullName>
        <label>Existing FG</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FG_Type_Needed__c</fullName>
        <label>FG Type Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1: Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2: Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: Scripted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <label>File Format</label>
        <picklist>
            <picklistValues>
                <fullName>MS Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Workbook - Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbook - Custom Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbook - Content License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbook - Previous Version on File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbook - Logical Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator&apos;s Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Blurb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Logo_Needed__c</fullName>
        <formula>Content_Pack__r.Logo_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is set on the Content Pack.</inlineHelpText>
        <label>Logo Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp Won?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>text(Content_Pack__r.Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Content_Pack__r.Opportunity__r.Id , Content_Pack__r.Opportunity__r.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Due_Date__c</fullName>
        <formula>Content_Pack__r.Powerpoint_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Content Pack field</inlineHelpText>
        <label>Powerpoint Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Needed__c</fullName>
        <formula>text (Content_Pack__r.Powerpoint_Needed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Content Pack</inlineHelpText>
        <label>Powerpoint Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Due_Date__c</fullName>
        <label>Production Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Items_Producer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <label>Production Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Removed_from_Product_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, then a user removed this from their custom lite or custom product within the Product Selector window.</inlineHelpText>
        <label>Removed from Product Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Formatting_Instructions__c</fullName>
        <label>Special Formatting Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workbook_Location__c</fullName>
        <label>Workbook Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_UPC__c</fullName>
        <externalId>true</externalId>
        <label>Workbook UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Content Item</label>
    <listViews>
        <fullName>All_Content_Items2</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>Content_Item_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Production_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Content Items  - InProgress</label>
    </listViews>
    <listViews>
        <fullName>All_Incomplete_Content_Items</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Reprint,Not Required,Canceled</value>
        </filters>
        <filters>
            <field>Production_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required,Canceled</value>
        </filters>
        <label>All Incomplete Content Items</label>
    </listViews>
    <listViews>
        <fullName>Amy_s_Content_Completed_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Pack__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Amy Van Trump</value>
        </filters>
        <label>Amy&apos;s Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Amy_s_Content_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Pack__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Reprint,New,In Progress</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Amy Van Trump</value>
        </filters>
        <label>Amy&apos;s Content Items</label>
    </listViews>
    <listViews>
        <fullName>Andrea_S_Content_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Strong</value>
        </filters>
        <label>Andrea&apos;s Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Andrea_s_Content_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Pack__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Customer Review,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Strong</value>
        </filters>
        <label>Andrea&apos;s Content Items</label>
    </listViews>
    <listViews>
        <fullName>Chanda_Content_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Chanda Zimmerman</value>
        </filters>
        <label>Chanda Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Chandas_Content_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Pack__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Customer Review,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Chanda Zimmerman</value>
        </filters>
        <label>Chanda&apos;s Content Items</label>
    </listViews>
    <listViews>
        <fullName>Jessica_B_Content_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Jessica Bishop</value>
        </filters>
        <label>Jessica B Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Jessica_B_s_Content_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Pack__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Customer Review,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Jessica Bishop</value>
        </filters>
        <label>Jessica B&apos;s Content Items</label>
    </listViews>
    <listViews>
        <fullName>Ken_s_Content_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Kenneth Nicely</value>
        </filters>
        <label>Ken&apos;s Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Mary_s_Content_Completed_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>NAME</columns>
        <columns>Content_Pack__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Mary Carroll</value>
        </filters>
        <label>Mary&apos;s Content Completed Items</label>
    </listViews>
    <listViews>
        <fullName>Mary_s_Content_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Item_Number__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Designer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Customer Review,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Kenneth Nicely</value>
        </filters>
        <label>Ken&apos;s Content Items</label>
    </listViews>
    <listViews>
        <fullName>Mary_s_Content_Items1</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Mary Carroll</value>
        </filters>
        <label>Mary&apos;s Content Items-All</label>
    </listViews>
    <listViews>
        <fullName>Marys_Content_Items</fullName>
        <columns>Content_Item_Number__c</columns>
        <columns>Content_Pack__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Customer Review,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Mary Carroll</value>
        </filters>
        <label>Mary&apos;s Content Items</label>
    </listViews>
    <nameField>
        <label>Content Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>